--- a/src/main/resources/templates/pass.html
+++ b/src/main/resources/templates/pass.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" th:src="@{/js/monitor.js}"></script>
     <script type="text/javascript" th:src="@{/js/spin.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/ladda.min.js}"></script>
-    <link th:href="@{/css/ladda-themeless.min.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/ladda.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{/css/pass.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{/css/bootstrap.css}" rel="stylesheet" type="text/css"/>
 </head>
