--- a/src/main/resources/static/css/basic.css
+++ b/src/main/resources/static/css/basic.css
@@ -2,14 +2,21 @@ body, textarea, input, button, select, keygen, legend{margin: 0; padding: 0;font
 h1, h2, h3, h4, h5, h6 {font-weight: normal;}
 summary{outline: 0;}
 ul, li{list-style: none;}
+img {vertical-align: middle;}
 a, a:hover{text-decoration: none; cursor: pointer;}
+a:link {color: #666666;}
+a:visited {color: #666666;}
 a:hover {color: #5B9AFF;}
 
 
 .basic_top_info{
      width:100%;
      height:4rem;
-     background: #232938;
+     background:url(../img/basic_01.png) no-repeat center top;
+     display: inline-block;
+     vertical-align: middle;
+     background-size:100% 100%;
+     background-repeat: repeat-x;
 }
 .h_top{
 	width: 100%;
@@ -37,13 +44,21 @@ a:hover {color: #5B9AFF;}
 	color: #FFFFFF;
 }
 .key_index{
+	width: 20%;
+	margin-top: 6em;
+	margin-left: 44%;
+	position:absolute;
+}
+.key_index img{
 	margin-top: 3em;
-	margin-left: 45%;
+	margin-left: -5.1em;
 }
 .basic_info{
 	width: 80%;
+	margin-top: 13em;
 	position:absolute;
 	margin-left: 20%;
+	
 }
 .basic_info_key{
 	width: 30%;
@@ -87,6 +102,7 @@ a:hover {color: #5B9AFF;}
 .basic_info_key h4{
 	margin-top: 1em;
 	margin-left: 5%;
+/* 	word-wrap:break-word; */
 }
 .basic_info_key span{
 	margin-left: 2%;
