--- a/src/main/resources/static/css/pass.css
+++ b/src/main/resources/static/css/pass.css
@@ -1,30 +1,42 @@
-body, textarea, input, button, select, keygen, legend{margin: 0; padding: 0;font:14px "Microsoft YaHei", Verdana, "宋体", sans-serif; font-weight: normal; color: #666666; outline: 0;}
+* {margin: 0; padding: 0;}
+body, textarea, input, button, select, keygen, legend{font:14px "Microsoft YaHei", Verdana, "宋体", sans-serif; font-weight: normal; color: #666666; outline: 0;}
+header, footer, section, article, aside, nav, address, figure, figcaption, menu, details {display:block;}
 h1, h2, h3, h4, h5, h6 {font-weight: normal;}
+table {border-collapse: collapse; border-spacing: 0;}
+caption, th {text-align:left;font-weight: normal;}
+html, body, fieldset, img, iframe, abbr{border: 0;}
+i, cite, em, var, address, dfn{font-style: normal;}
 summary{outline: 0;}
 ul, li{list-style: none;}
+img {vertical-align: middle;}
 a, a:hover{text-decoration: none; cursor: pointer;}
+a:visited {color: #FFFFFF;}
 a:hover {color: #5B9AFF;}
+a:active {color: #5B9AFF;}
+/* .outer-section {width:100%; float: left; clear: both;}
+.outer-wrapper {width:100%; max-width: 1920px; margin: 0 auto;}
+.banner {width:100%; max-width: 1920px; height: auto;} */
 
-.top_info a
-{
-	color: #FFFFFF;
-}
 .basic_top_info{
-	width:100%;
-	height:4rem;
-	background: #232938;
+     min-width:100%;
+     height:4rem;
+	 /* background: #232938; */
+	 background:url(../img/pass_02.png) no-repeat center top;
+	 display: inline-block;
+	 vertical-align: middle;
+	 background-size:100% 100%;
+	 background-repeat:repeat-x;
 }
 .h_top{
 	width: 100%;
 	float: left;
 	font-size:20px;
 	margin-top: 1em;
-}
+} 
 .h_top div
 {
 	width:50% ;
 }
-
 .top_info{
 	margin-left: 40%;
 	float: left;
@@ -42,10 +54,11 @@ a:hover {color: #5B9AFF;}
 }
 .pass_backdrop{
 	width:100%;
+	height:13rem;
 	display: inline-block;
 	vertical-align: middle;
 	background-size:100% 100%;
-	background-repeat:repeat-x;
+	background: url(../img/pass_03.png) repeat-x center top;
 }
 .pass_info{
 	width: 100%;
@@ -62,70 +75,123 @@ a:hover {color: #5B9AFF;}
 	float: left;
 	margin-left: 15%;
 	white-space:nowrap;
-	margin-top: 0.3em;
+	margin-top: 0.5em;
 	font-size:16px;
 	font-family:PingFang;
-	color:#0D1218;
-	text-align: center;
-	font-weight: 400;
-	line-height: 2;
+	font-weight:300;
+	color:rgba(255,255,255,1)
 }
 .info_input{
 	width: 50%;
 	float: left;
 	margin-bottom: 3em;
 }
+.info_input input{
+	height: 2em;
+	width: 100%;
+	color: #FFFFFF;
+	border:1px solid rgba(255,255,255,1);
+	border-radius:0.1875rem;
+	background:rgba(28,40,54,1);
+}
+.info_input input:focus{
+    border-style:solid;
+    border-color: #03a9f4;
+    box-shadow: 0 0 10px #03a9f4;	
+}
+.dropdown {
+  position: relative;
+  width: 100%;
+}
+.dropdown input{
+	height: 2em;
+	border:1px solid rgba(255,255,255,1);
+	border-radius:0.1875rem;
+	background:rgba(28,40,54,1);
+	width: 50%;
+	color: #FFFFFF;
+	margin-left: 30%;
+}
+.dropdown input:focus{
+	background: #03A9F4;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #666666;
+  min-width: 50.5%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  color: #FFFFFF;
+  text-align: center;
+  margin-left: 30%;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 .export{
-	margin-left: 43%;
+	position:absolute;
 	width:10%;
 	height:3rem;
-	background:seagreen;
-	display: inline-block;
-	margin-top: 1.5em;
-	box-shadow: 0px 0px 15px rgba(0,0,0,0.8);
-	border-radius: 10px 10px 10px 10px;
-	border: 0px solid #E0E8FF;
-	color: #FFFFFF;
-	cursor: pointer;
-	min-width: 10em;
-}
-.export span{
-	font-size: 1.5rem;
-}
-.export_case{
-	margin-top: 2em;
-	display: inline-block;
 	margin-left: 43%;
-	border-radius: 10px 10px 10px 10px;
-	background: #1C2836;
-	padding: 15px;
-	width: 10%;
-	height: 3em;
-	border: 0px solid #E0E8FF;
-	line-height: 1em;
-	min-width: 10em;
+	margin-top: 10em;
+
 }
-.export_case span{
-	color: orange;
-	font-size: 2em;
+.export button{
+	width:100%;
+	height:100%;
+	background:url(../img/ex_03.png) no-repeat center top;
+	background-size:100% 100%;
+	box-shadow: 0px 5px 15px rgba(0,0,0,0.8);
+	border: 0px solid #E0E8FF;
+}
+button:active{
+	border-color: #03a9f4;
+	box-shadow: 0 0 10px #03a9f4;
+}
+
+.export_case{
+	margin-left: 44%;
+	width:8%;
+	height:2.4rem;
+	border-radius:0.3rem 0.3rem 15rem 15rem;
+	background: #1C2735;
+	display: inline-block;
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+	border: 0.1px solid #E0E8FF;
+	
+}
+.export_case div{
+	text-align: center;
+	color:#FFFFFF;
+	font-size: 200%;
+}
+.import button{
+	width:100%;
+	height:100%;
+	background:url(../img/ex_06.png) no-repeat center top;
+	background-size:100% 100%;
+	box-shadow: 0px 5px 15px rgba(0,0,0,0.8);
+	border: 0px solid #E0E8FF;
+}
+button:active{
+	border-color: #03a9f4;
+	box-shadow: 0 0 10px #03a9f4;
 }
 .import{
-	margin-left: 43%;
+	position:absolute;
 	width:10%;
 	height:3rem;
-	border-radius: 10px 10px 10px 10px;
-	background: orange;
-	display: inline-block;
-	vertical-align: middle;
-	background-repeat:repeat-x;
-	margin-top: 2em;
-	box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-	overflow: visible;
-	border: 0.2px solid #E0E8FF;
-	color: #0D1218;
-	cursor: pointer;
-	min-width: 10em;
+	margin-left: 43%;
+	margin-top: 10em;
 }
-.import span{
-	font-size: 1.5rem;
-}
+
+
+
+
+
+
+
+
+
+
+
