--- a/src/main/resources/static/css/pass.css
+++ b/src/main/resources/static/css/pass.css
@@ -53,8 +53,9 @@ a:active {color: #5B9AFF;}
 	color: #FFFFFF;
 }
 .pass_backdrop{
+	position: absolute;
 	width:100%;
-	height:13rem;
+	height:45%;
 	display: inline-block;
 	vertical-align: middle;
 	background-size:100% 100%;
@@ -90,7 +91,8 @@ a:active {color: #5B9AFF;}
 	height: 2em;
 	width: 100%;
 	color: #FFFFFF;
-	border:1px solid rgba(255,255,255,1);
+	border:1px solid #03a9f4;
+/*	box-shadow: 0 0 2px #03a9f4;*/
 	border-radius:0.1875rem;
 	background:rgba(28,40,54,1);
 }
@@ -133,8 +135,7 @@ a:active {color: #5B9AFF;}
 	width:10%;
 	height:3rem;
 	margin-left: 43%;
-	margin-top: 10em;
-
+	top:70%;
 }
 .export button{
 	width:100%;
@@ -182,7 +183,7 @@ button:active{
 	width:10%;
 	height:3rem;
 	margin-left: 43%;
-	margin-top: 10em;
+	top: 110%;
 }
 
 
