--- a/src/main/resources/templates/basic_info.html
+++ b/src/main/resources/templates/basic_info.html
@@ -42,7 +42,8 @@
     </div>
     <div class="basic_info_key" style="">
         <div class="outer_img"></div>
-        <div class="info_img"></div> <span>当前难度</span>
-        <h4 style="word-wrap:break-word;line-height: 25px;padding-top: 10px;"  th:text="${result.target}"></h4>
+        <div class="info_img"></div>
+        <span>当前难度</span>
+        <h4 style="word-wrap:break-word;line-height: 25px;padding-top: 10px;" th:text="${result.target}"></h4>
     </div>
 </html>
