--- a/src/main/resources/static/css/deal.css
+++ b/src/main/resources/static/css/deal.css
@@ -8,29 +8,69 @@ body{background: #EDF0F4;}
 	padding-bottom: 1em;
 }
 .deal_part{
-	min-width: 92%;
+	min-width: 95%;
 	float: left;
-	margin-left: 5%;
+	margin-left: 2%;
 	margin-top: 1%;
 }
 .deal_part input{
-	height: 30px;
-	min-width: 20%;
+	height: 42px;
+	min-width: 40%;
 	border-radius:5px;
 	border:2px solid rgba(81,155,253,1);
 }
 .deal_part button{
-	height: 35px;
-	min-width: 5%;
-	font-size: 16px;
+	height: 45px;
+	min-width: 6%;
+	font-size: 18px;
 	background: #519BFD;
 	color: #FFFFFF;
 	border:0px solid rgba(212,211,211,1);
 	border-radius:5px;
 	margin-top: 5px;
 }
-.deal_cont table{
-	width: 90%;
-	margin-top: 6em;
-	margin-left: 5%;
+/*.deal_cont table{*/
+/*	width: 90%;*/
+/*	margin-top: 6em;*/
+/*	margin-left: 5%;*/
+/*}*/
+.deal{
+
+}
+
+.deal table{
+	width: 96%;
+	margin-left: 2%;
+	margin-top: 7em;
+}
+.deal th{
+	text-align: center;
+	height: 45px;
+	font-weight:900;
+	font-size: 16px;
+	background: #E2E8F2;
+}
+.deal td{
+	text-align: center;
+	height: 45px;
+}
+.deal td .root{
+	background: #48BC3F;
+	border-radius:5px;
+	border:0px #ff0000 solid;
+	color: #FFFFFF;
+
+}
+.deal table,th,td
+{
+	border:1px solid #519BFD;
+}
+
+.deal td .do{
+	background: #519BFD;
+	border-radius:5px;
+	border:0px #ff0000 solid;
+	color: #FFFFFF;
+	height: 28px;
+	min-width: 30%;
 }
