--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -247,11 +247,11 @@ a:hover {color: #5B9AFF;}
 	margin-left: 18px;
 	line-height: 40px;
 	display: inline-block;position: relative;float: left;
-	height: 80px;
+	height: 100px;
 	border-radius:5px;
 	border:1px solid #5B9AFF;
 	background: #EEF0F6;
-	width: 8%;
+	min-width: 8%;
 }
 .tabexport tr
 {
