--- a/src/main/resources/static/css/node.css
+++ b/src/main/resources/static/css/node.css
@@ -31,18 +31,21 @@ table {border-collapse: collapse; border-spacing: 0;}
 	
 }
 .control table{
-	width: 90%;
-	margin-left: 5%;
+	width: 96%;
+	margin-left: 2%;
+	margin-top: 2em;
+	white-space:nowrap;
 }
 .control th{
 	text-align: center;
-	height: 50px;
+	height: 45px;
 	font-weight:800;
 	font-size: 16px;
+	background: #E2E8F2;
 }
 .control td{
 	text-align: center;
-	height: 30px;
+	height: 45px;
 }
 .control td .root{
 	background: #48BC3F;
@@ -53,7 +56,7 @@ table {border-collapse: collapse; border-spacing: 0;}
 }
 .control table,th,td
 {
-	border:1px solid black;
+	border: 1px solid #519BFD;
 }
 
 .control td .do{
