--- a/src/main/resources/templates/mail.html
+++ b/src/main/resources/templates/mail.html
@@ -9,7 +9,7 @@
     <link th:href="@{/font-awesome-4.7.0/css/font-awesome.css}" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 </head>
-<body>
+<body style="background: #EDF0F4;">
 <div class="headpage"></div>
 <div style="width: 87%;margin-left: 1%;float: left;margin-top: 1%;">
     <div class="mail_cont">
