--- a/src/main/resources/templates/node.html
+++ b/src/main/resources/templates/node.html
@@ -18,7 +18,7 @@
 <div class="headpage"></div>
 <div class="control_cont" style="width: 87%;margin-left: 1%;float: left;margin-top: 1%;height: auto;">
     <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"
-            style="background:#519BFD;margin: 1em;">
+            style="background:#519BFD;margin-left: 2%;margin-top: 20px;">
         +&nbsp;添加新的节点
     </button>
 
