--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -17,7 +17,7 @@
 <div style="width: 87%;margin-left: 1%;float: left;margin-top: 1%;">
     <div class="sign_cont" style="height: auto;">
         <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"
-                style="background:#519BFD;margin: 1em;">
+                style="background:#519BFD;margin-left: 2%;margin-top: 20px;">
             +&nbsp;添加新的用户
         </button>
 
