--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container" style="text-align: center">
     <form method="post" th:action="@{/logout}">
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        <input type="text" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <button type="submit" class="btn btn-primary">退出登入</button>
     </form>
 </div>
