--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
 </head>
 <body>
 <div style="width:11%;min-width: 11%; float: left;">
@@ -9,13 +10,13 @@
         <div class="inner1">
             <div class="inner1-top"><i class="fa fa-bar-chart"></i>&emsp;WDC运维平台</div>
         </div>
-        <div class="inner2">
+        <div class="inner2" id="example">
             <div><a href="home"><i class="fa fa-list-alt"></i>&emsp;信息概要</a></div>
             <div><a href="node"><i class="fa fa-list-ul"></i>&emsp;控制台&emsp;</a></div>
-            <div><a href=""><i class="fa fa-file-text-o"></i>&emsp;日志信息</a></div>
+<!--            <div><a href=""><i class="fa fa-file-text-o"></i>&emsp;日志信息</a></div>-->
             <div><a href="mail"><i class="fa fa-wpexplorer"></i>&emsp;预警信息</a></div>
             <div><a href="user"><i class="fa fa-key"></i>&emsp;鉴权设置</a></div>
-            <div><a href="deal"><i class="fa fa-envelope-open-o"></i>&emsp;合约部署</a></div>
+<!--            <div><a href="deal"><i class="fa fa-envelope-open-o"></i>&emsp;合约部署</a></div>-->
         </div>
         <div class="inner3">
             <div class="nav_jum"><i class="fa fa-angle-double-left fa-2x"></i></div>
@@ -27,31 +28,34 @@
         <div class="header">
             <table class="">
                 <tr style="height: 80px;">
-                    <td class="tdroot" style="font-size: 18px;" ><i class="fa fa-address-book" style="color: #48BC3F;"></i>&emsp;用户：&nbsp;
+                    <td class="tdroot" style="font-size: 18px;width: 20%;" ><i class="fa fa-address-book" style="color: #48BC3F;"></i>&emsp;用户：&nbsp;
                         <span th:text="${customUser.getUsername()}"></span>
                     </td>
                     <td colspan="5" style="font-size: 18px;">
                         当前时间：&nbsp;<span id = "time"></span>
                     </td>
                     <td class="tdstop">
-                        <button class="stop_do" th:href="@{logout}"><i class="fa fa-sign-out fa-lg"></i>&nbsp;退出</button>
+                        <a href="/logout"><button class="stop_do"><i class="fa fa-sign-out fa-lg"></i>&nbsp;退出</button></a>
                     </td>
                 </tr>
                 <tr>
-                    <td class="tdroot" style="font-size: 16px;"><i class="fa fa-circle" style="color: #48BC3F;"></i>&nbsp;当前节点：KKKKKKKKKKKK节点
+                    <td class="tdroot" style="font-size: 16px;color: #519BFD;"><i class="fa fa-circle" style="color: #48BC3F;"></i>&nbsp;当前节点：
+                        <span th:text="${info.getNodeIP()}"></span>
                     </td>
+                    <td class="tdnode" style="color: #519BFD;"><i class="fa fa-unsorted" style="color: #48BC3F;"></i>&nbsp;节点版本：
+                        <span th:text="${version}"></span>
+                    </td>
+                    <td class="tdnode" style="color: #519BFD;">运行状态：
+                        <span th:text="${isrun}"></span>
                     <td class="tdnode-img"><i class="fa fa-unsorted" style="color: #48BC3F;"></i>
                     </td>
-                    <td class="tdnode" style="color: #519BFD;">节点版本：2.01.213
+                    <td style="color: #519BFD;">节点类型：
+                        <span th:text="${info.getNodeType()}"></span>
                     </td>
-<!--                    <td class="tdnode" style="color: #519BFD;"><i class="fa fa-unsorted" style="color: #48BC3F;"></i>&nbsp;节点版本：2.01.213-->
-<!--                    </td>-->
-                    <td class="tdnode" style="color: #519BFD;">运行状态：运行中</td>
-                    <td style="color: #519BFD;">节点类型：普通全节点</td>
-                    <td class="tdstop">
+                    <td class="tdstop" id="stop">
                         <button class="h-button"><i class="fa fa-stop"></i>&nbsp;停止</button>
                     </td>
-                    <td>
+                    <td id="start">
                         <button class="h-button"><i class="fa fa-undo"></i>&nbsp;重启</button>
                     </td>
                 </tr>
@@ -74,5 +78,51 @@
         document.getElementById("time").innerHTML=strYear+strMonth+strDay+" "+strTime;
     }
     setInterval("setTime()",1000);
+    $(document).ready(function () {
+        var role = [[${role}]];
+        if(role == "ROLE_REVIEWER"){//仅查询
+            document.getElementById("start").style.visibility="hidden";//隐藏
+            document.getElementById("stop").style.visibility="hidden";//隐藏
+        }
+    });
+
+    $("#stop").click(function () {
+        var r = confirm("是否停止");
+        if (r == true) {
+            $.ajax({
+                type: "GET",
+                contentType: "application/json",
+                url: "/stop",
+                data: "",
+                success: function (result) {
+                    // swal(
+                    //     result.message,
+                    //     'success'
+                    // )
+                    alert(result);
+                }
+            })
+        }
+    });
+
+    $("#start").click(function () {
+        var r = confirm("是否重启");
+        if (r == true) {
+            $.ajax({
+                type: "GET",
+                contentType: "application/json",
+                url: "/restart",
+                data: "",
+                success: function (result) {
+                    // swal(
+                    //     result.message,
+                    //     'success'
+                    // )
+                    alert(result);
+
+                }
+            })
+        }
+    });
 </script>
 </html>
