--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
 <div class="container">
 	<h1>登入</h1>
 	<div th:if="${param.error}" class="alert alert-danger" role="alert">
-		用户名或密码错误
+		用户名或密码错误123123
 	</div>
 	<form method="post" th:action="@{/login}">
 		<div class="form-group">
@@ -23,10 +23,10 @@
 			<label for="password">密码</label>
 			<input name="password" type="password" class="form-control" id="password" placeholder="输入密码">
 		</div>
-		<div class="form-group form-check">
-			<input name="remember-me" type="checkbox" class="form-check-input" id="remember">
-			<label class="form-check-label" for="remember">记住密码</label>
-		</div>
+<!--		<div class="form-group form-check">-->
+<!--			<input name="remember-me" type="checkbox" class="form-check-input" id="remember">-->
+<!--			<label class="form-check-label" for="remember">记住密码</label>-->
+<!--		</div>-->
 		<button type="submit" class="btn btn-primary">登入</button>
 	</form>
 </div>
