--- a/src/main/resources/templates/mail.html
+++ b/src/main/resources/templates/mail.html
@@ -8,7 +8,7 @@
     <link th:href="@{/css/navion.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{/font-awesome-4.7.0/css/font-awesome.css}" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-</head>
+    <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script></head>
 <body style="background: #EDF0F4;">
 <div class="headpage"></div>
 <div style="width: 87%;margin-left: 1%;float: left;margin-top: 1%;">
@@ -27,24 +27,48 @@
         <div class="bind_mail">
             <div class="bind_send">绑定发送邮箱:</div>
             <input type="text" placeholder="请输入新的发送邮箱" class="input-phone" id="txt_send"/>
-            <div class="bind_send">绑定发送邮箱:</div>
+            <div class="bind_send">发送邮箱密码:</div>
+            <input type="password" placeholder="请输入新的发送邮箱登陆密码" class="input-phone" id="txt_password"/>
+            <div class="bind_send">绑定接受邮箱:</div>
             <input type="text" placeholder="请输入新的接收邮箱" class="input-phone" id="txt_receiver"/>
-            <div class="note">注：如若需填写多个接收邮箱，中间用 ";" 隔开。</div>
+            <div class="note">注：发送邮箱默认为outlook邮箱</div>
             <button class="mail_confirm" id="bt_editmail">确认修改</button>
         </div>
     </div>
 </div>
-<script type="text/javascript">
+<script th:inline="javascript">
+    $("#txt_send").val([[${mail.getSender()}]]);
+    $("#txt_password").val([[${mail.getPassword()}]]);
+    $("#txt_receiver").val([[${mail.getReceiver()}]]);
     $(function () {
         $(" .headpage").load("control");
         $('#bt_editmail').click(function () {
-            var urlData = {sender: $('#txt_send').val(), receiver: $('#txt_receiver').val()};
+            var emailReg = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+            var send = document.getElementById("txt_send").value;
+            var receiver = document.getElementById("txt_receiver").value;
+            if (!emailReg.test(send)) {
+                alert("发送邮箱格式不正确!");
+                return;
+            };
+            if (!emailReg.test(receiver)) {
+                alert("接受邮箱格式不正确!");
+                return;
+            };
+            var urlData = {sender: $('#txt_send').val(), receiver: $('#txt_receiver').val(),password:$('#txt_password').val()};
             $.get('editmail', urlData, function (result) {
-                alert(result.message);
+                alert(result);
                 window.location.reload();
                 console.log(result);
+
             }, 'json');
         });
+    });
+    $(document).ready(function () {
+
+        var role = [[${role}]];
+        if(role == "ROLE_REVIEWER"){//仅查询
+            document.getElementById("bt_editmail").style.visibility="hidden";//隐藏
+        };
     });
 </script>
 </body>
